Alterações e consertos na responsividade

--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,204 +1,239 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayoutCompat2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
-    android:orientation="vertical"
-    tools:context="br.com.the_guardian.loginScreen">
+    android:background="@color/grey">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/rectangle"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayoutCompat2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/logo"
-        android:paddingTop="100dp" />
+        android:background="@color/grey"
+        android:orientation="vertical"
+        tools:context="br.com.the_guardian.loginScreen">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imageView3"
-        android:layout_width="176dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="-90dp"
-        android:src="@drawable/llogopng"
-        android:layout_marginStart="117dp"
-        android:layout_marginBottom="4dp"
-        />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/rectangle"
+            style="@style/logo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:paddingTop="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"  />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/textbemvindo"
-        android:layout_width="279dp"
-        android:layout_height="25dp"
-        android:text="@string/welcome_back"
-        android:fontFamily="@font/kronaone_regular"
-        android:textAlignment="textStart"
-        android:textColor="@color/dark_blue"
-        android:textSize="20sp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="7dp"
-        />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageView3"
+            android:layout_width="176dp"
+            android:layout_height="89dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/llogopng"
+            app:layout_constraintBottom_toBottomOf="@+id/rectangle"
+            app:layout_constraintEnd_toEndOf="@+id/rectangle"
+            app:layout_constraintStart_toStartOf="@id/rectangle"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/AppCompatTextView3"
-        android:layout_width="260dp"
-        android:layout_height="44dp"
-        android:text="@string/get_started"
-        android:textAlignment="textStart"
-        android:textColor="@color/dark_blue"
-        android:fontFamily="@font/juraregular"
-        android:textSize="16sp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="7dp"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textbemvindo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:fontFamily="@font/kronaone_regular"
+            android:text="@string/welcome_back"
+            android:textAlignment="center"
+            android:textColor="@color/dark_blue"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@id/rectangle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rectangle" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:layout_width="310dp"
-        android:layout_height="55dp"
-        android:id="@+id/etEmailLogin"
-        style="@style/email_barra"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
-        android:drawableEnd="@drawable/email_svg"
-        android:hint="@string/email_login"
-        android:inputType="textEmailAddress"
-        android:fontFamily="@font/juraregular"
-        android:textColorHint="@color/grey"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/AppCompatTextView3"
+            android:layout_width="312dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/juraregular"
+            android:text="@string/get_started"
+            android:textAlignment="center"
+            android:textColor="@color/dark_blue"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/textbemvindo"
+            app:layout_constraintStart_toStartOf="@id/textbemvindo"
+            app:layout_constraintTop_toBottomOf="@+id/textbemvindo" />
 
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/etSenhaLogin"
-        android:layout_width="310dp"
-        android:layout_height="55dp"
-        style="@style/email_barra"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="40dp"
-        android:drawableEnd="@drawable/eye_svgrepo_com"
-        android:hint="@string/senha_login"
-        android:fontFamily="@font/juraregular"
-        android:inputType="textPassword"
-        android:textColorHint="@color/grey"
-        />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etEmailLogin"
+            style="@style/email_barra"
+            android:layout_width="300dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="44dp"
+            android:drawableEnd="@drawable/email_svg"
+            android:fontFamily="@font/juraregular"
+            android:foregroundGravity="center"
+            android:hint="@string/email_login"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/grey"
+            app:layout_constraintEnd_toEndOf="@id/AppCompatTextView3"
+            app:layout_constraintStart_toStartOf="@id/AppCompatTextView3"
+            app:layout_constraintTop_toBottomOf="@+id/AppCompatTextView3" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/EmailText"
-        android:layout_width="51dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="-177dp"
-        android:hint="@string/email_login"
-        android:fontFamily="@font/juraregular"
-        android:textColor="@color/dark_blue"
-        android:textSize="20sp"
-        />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etSenhaLogin"
+            style="@style/email_barra"
+            android:layout_width="300dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="4dp"
+            android:drawableEnd="@drawable/eye_svgrepo_com"
+            android:fontFamily="@font/juraregular"
+            android:hint="@string/senha_login"
+            android:inputType="textPassword"
+            android:textColorHint="@color/grey"
+            app:layout_constraintEnd_toEndOf="@id/etEmailLogin"
+            app:layout_constraintStart_toStartOf="@id/etEmailLogin"
+            app:layout_constraintTop_toBottomOf="@+id/SenhaText" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/SenhaText"
-        android:layout_width="70dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="69dp"
-        android:hint="@string/senha_login"
-        android:fontFamily="@font/juraregular"
-        android:textColor="@color/dark_blue"
-        android:textSize="20sp"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/EmailText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/juraregular"
+            android:hint="@string/email_login"
+            android:textColor="@color/dark_blue"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/etEmailLogin"
+            app:layout_constraintTop_toBottomOf="@+id/AppCompatTextView3" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvEsqueceuSenha"
-        android:layout_width="190dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="230dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/esqueci_senha"
-        android:fontFamily="@font/jurabold"
-        android:textColor="@color/purple"
-        android:textSize="12sp"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/SenhaText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/juraregular"
+            android:hint="@string/senha_login"
+            android:textColor="@color/dark_blue"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@id/etEmailLogin"
+            app:layout_constraintTop_toBottomOf="@+id/etEmailLogin"
+            />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:id="@+id/btnEnviarLogin"
-        style="@style/login_button"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/login"
-        android:fontFamily="@font/kronaone_regular"
-        android:textSize="24sp"
-        android:textColor="@color/grey"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvEsqueceuSenha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/jurabold"
+            android:text="@string/esqueci_senha"
+            android:textColor="@color/purple"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.78"
+            app:layout_constraintStart_toStartOf="@id/etSenhaLogin"
+            app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin"
+            />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvCadastrar"
-        android:layout_width="240dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="13dp"
-        android:textAlignment="center"
-        android:text="@string/sem_cadastro"
-        android:fontFamily="@font/jurasemibold"
-        android:textSize="16sp"
-        />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnEnviarLogin"
+            style="@style/login_button"
+            android:layout_width="250dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="92dp"
+            android:fontFamily="@font/kronaone_regular"
+            android:gravity="center"
+            android:text="@string/login"
+            android:textColor="@color/grey"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@id/etSenhaLogin"
+            app:layout_constraintEnd_toEndOf="@id/etSenhaLogin"
+            app:layout_constraintTop_toBottomOf="@+id/etSenhaLogin" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/ou"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:text="@string/ou"
-        android:fontFamily="@font/jurabold"
-        android:layout_marginStart="190dp"
-        android:layout_marginTop="-10dp"
-        android:textColor="@color/dark_blue"
-        android:textSize="16sp"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvCadastrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/jurasemibold"
+            android:text="@string/sem_cadastro"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/btnEnviarLogin"
+            app:layout_constraintTop_toBottomOf="@+id/btnEnviarLogin" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvEntrarAnonimamente"
-        android:layout_width="75dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="-9dp"
-        android:layout_marginStart="166dp"
-        android:fontFamily="@font/jurasemibold"
-        android:text="@string/ver_mapa"
-        android:textColor="@color/purple"
-        android:textSize="16sp"
-        />
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvLoginEnviado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/login_realizado"
-        android:textAlignment="center"
-        android:textColor="@color/green"
-        android:textSize="20sp"
-        android:visibility="gone"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/ou"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/jurabold"
+            android:text="@string/ou"
+            android:textColor="@color/dark_blue"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@id/btnEnviarLogin"
+            app:layout_constraintTop_toBottomOf="@+id/btnEnviarLogin" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvLoginNegado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Login_negado"
-        android:textAlignment="center"
-        android:textColor="@color/red"
-        android:textSize="20sp"
-        android:visibility="gone"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="30dp"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvEntrarAnonimamente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="75dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/jurasemibold"
+            android:text="@string/ver_mapa"
+            android:textColor="@color/purple"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/tvCadastrar"
+            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintStart_toStartOf="@id/tvCadastrar"
+            app:layout_constraintTop_toBottomOf="@+id/ou" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvStatusEsqueceuSenha"
-        android:layout_width="146dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/informemail"
-        android:textAlignment="center"
-        android:textColor="@color/red"
-        android:textSize="16sp"
-        android:visibility="gone"
-        android:layout_marginStart="135dp"
-        />
-</androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLoginEnviado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/login_realizado"
+            android:textAlignment="center"
+            android:textColor="@color/green"
+            android:textSize="20sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintStart_toStartOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintTop_toBottomOf="@+id/tvEntrarAnonimamente" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLoginNegado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Login_negado"
+            android:textAlignment="center"
+            android:textColor="@color/red"
+            android:textSize="20sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintStart_toStartOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintTop_toBottomOf="@+id/tvEntrarAnonimamente"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvStatusEsqueceuSenha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/informemail"
+            android:textAlignment="center"
+            android:textColor="@color/red"
+            android:textSize="16sp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintHorizontal_bias="0.048"
+            app:layout_constraintStart_toStartOf="@id/tvEntrarAnonimamente"
+            app:layout_constraintTop_toBottomOf="@+id/tvEntrarAnonimamente"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
