--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,98 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/grey"
-    tools:context=".homeScreen">
+    android:background="@color/grey">
 
-<!--    Tool bar da tela de menu, com os botões de sair e o
-Textview que indica a tela menu ou "home"-->
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/rectangle"
+    <androidx.constraintlayout.widget.ConstraintLayout
+
+        android:id="@+id/linearLayoutCompat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/logo"
-        android:paddingTop="100dp" />
-<!--Botão de sair-->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnSair"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="end"
-        android:layout_marginTop="-69dp"
-        android:layout_marginEnd="20dp"
-        android:drawableEnd="@drawable/baseline_logout_24"
-        android:background="@color/dark_blue"
-        />
-<!--TextView indicando a tela HOME-->
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:text="@string/home"
-        android:layout_marginTop="-39dp"
-        android:layout_marginStart="150dp"
-        android:textColor="@color/grey"
-        android:fontFamily="@font/kronaone_regular"
-        android:textSize="24sp"/>
-<!--MAPA-->
-    <androidx.cardview.widget.CardView
-        android:layout_width="386dp"
-        android:layout_height="470dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="40dp"
-        app:cardCornerRadius="6dp">
+        android:background="@color/grey"
+        android:orientation="vertical"
+        tools:context=".homeScreen">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="386dp"
-            android:layout_height="470dp"
-            tools:context=".MapsActivity" />
-    </androidx.cardview.widget.CardView>
+        <!--    Tool bar da tela de menu, com os botões de sair e o
+    Textview que indica a tela menu ou "home"-->
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/rectangle"
+            style="@style/logo"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:paddingTop="100dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"  />
 
-    <!--Botão que cadastra o cartão-->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCadastrarCartao"
-        android:layout_width="185dp"
-        android:layout_height="99dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/habilita_cartão"
-        android:background="@drawable/button_border_round"
-        android:textColor="@color/grey"
-        android:fontFamily="@font/jurabold"
-        android:layout_marginStart="14dp"
-        android:layout_marginBottom="10dp"
-        android:textAlignment="textStart"
-        android:paddingStart="10dp"
-        android:textAllCaps="false"
-        android:textSize="14sp"
-        android:drawableEnd="@drawable/cardenfeite"
-        android:paddingEnd="-25dp"
-        android:paddingTop="10dp"
-        />
-    <!--Botão que mostra as locações do usuário-->
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnMinhasLocacoes"
-        android:layout_width="180dp"
-        android:layout_height="99dp"
-        android:layout_marginTop="-110dp"
-        android:text="@string/locacoes_pendentes"
-        android:background="@drawable/button_border_round"
-        android:textColor="@color/grey"
-        android:fontFamily="@font/jurabold"
-        android:paddingTop="18dp"
-        android:layout_marginStart="218dp"
-        android:layout_marginBottom="10dp"
-        android:textAlignment="viewStart"
-        android:textSize="14sp"
-        android:paddingStart="10dp"
-        android:paddingEnd="0dp"
-        android:textAllCaps="false"
-        android:drawableEnd="@drawable/cadeado"
-        />
+        <!--Botão de sair-->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSair"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:background="@color/dark_blue"
+            android:drawableEnd="@drawable/baseline_logout_24"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/rectangle"/>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/appCompatTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/kronaone_regular"
+            android:text="@string/home"
+            android:textColor="@color/grey"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="@id/btnSair"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/rectangle" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="380dp"
+            android:layout_height="460dp"
+            android:layout_marginTop="148dp"
+            app:cardCornerRadius="6dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="380dp"
+                android:layout_height="460dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:context=".MapsActivity" />
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnCadastrarCartao"
+            android:layout_width="160dp"
+            android:layout_height="99dp"
+            android:layout_margin="13dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button_border_round"
+            android:drawableEnd="@drawable/cardenfeite"
+            android:fontFamily="@font/jurabold"
+            android:paddingStart="10dp"
+            android:paddingTop="11dp"
+            android:paddingEnd="-32dp"
+            android:text="@string/habilita_cartão"
+            android:textAlignment="textStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey"
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="@id/cardView"
+            app:layout_constraintTop_toBottomOf="@id/cardView" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnMinhasLocacoes"
+            android:layout_width="160dp"
+            android:layout_margin="13dp"
+            android:layout_height="99dp"
+            android:layout_marginTop="28dp"
+            android:background="@drawable/button_border_round"
+            android:drawableEnd="@drawable/cadeado"
+            android:fontFamily="@font/jurabold"
+            android:paddingStart="13dp"
+            android:paddingTop="22dp"
+            android:paddingEnd="0dp"
+            android:text="@string/locacoes_pendentes"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textColor="@color/grey"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@id/cardView"
+            app:layout_constraintTop_toBottomOf="@id/cardView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
